changes for summer internship at Google

--- a/resume.tex
+++ b/resume.tex
@@ -81,23 +81,6 @@
 \begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
 \vspace{0pt} % Trick for alignment
 
-%----------------------------------------------------------------------------------------
-%	EDUCATION
-%----------------------------------------------------------------------------------------
-
-\section{Education} 
-
-\begin{tabular}{rl} % Start a table with two columns, one for dates and one for qualifications
-
-%------------------------------------------------
-% EDUCATION 1
-%------------------------------------------------
-
-2012 -- 2016 & \textbf{Rochester Institute of Technology} \\ 
-& \textsc{Computer Science Major} \\ 
-& \textit{Dean's List (3.60 GPA)}\\
-& Rochester, New York \\
-\end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE
@@ -114,9 +97,8 @@
 {\raggedright\large Google \\
 \textit{Engineering Practicum Intern}  \hfill {\small \href{http://google.com}{http://google.com}}\\ [5pt]}
 
-\normalsize{Worked on load testing infrastructure. Also worked on fixing bugs 
-in a variety of Google SRE software. Languages / tools used: Java, Python, 
-various Google datastores}
+\normalsize{Worked on load testing infrastructure and implemented performance increases
+    in Google SRE software. Languages / tools used: Java, Python, various Google datastores}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 0
@@ -151,7 +133,7 @@ team. Languages / tools used: Java, various AWS products}\\
 {\raggedright\large Six3 Systems, Inc. \\
 \textit{Summer Intern} \hfill {\small \href{http://six3esd.com}{http://six3esd.com}} \\[5pt]}
 
-\normalsize{Worked in a group developing a course for employees to learn about about big data solutions such as Hadoop, HBase, etc. Languages / tools used: Java, Hadoop, Eclipse, HBase}
+\normalsize{Worked in a group developing a course to teach employees about big data solutions such as Hadoop, HBase, etc. Languages / tools used: Java, Hadoop, Eclipse, HBase}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 3
@@ -184,7 +166,7 @@ team. Languages / tools used: Java, various AWS products}\\
 {\raggedright\large Computer Science Corporation \\
     \textit{Summer Intern } \hfill {\small \href{http://cscc.om}{http://csc.com}} \\[5pt]} 
 
-\normalsize{ Worked on a thin client lab setup used in demonstration to various government agencies.} \\
+\normalsize{ Worked on a thin client lab setup used in demonstrations to various government agencies.} \\
 
 \end{minipage} % End the left-hand side of the page
 \hfill
@@ -206,6 +188,24 @@ team. Languages / tools used: Java, various AWS products}\\
 }\\[10pt]
 
 %----------------------------------------------------------------------------------------
+%	EDUCATION
+%----------------------------------------------------------------------------------------
+
+\section{Education} 
+
+\begin{tabular}{rl} % Start a table with two columns, one for dates and one for qualifications
+
+%------------------------------------------------
+% EDUCATION 1
+%------------------------------------------------
+
+2012 -- 2016 & \textbf{Rochester Institute of Technology} \\ 
+& \textsc{Computer Science Major} \\ 
+& \textit{Dean's List (3.60 GPA)}\\
+& Rochester, New York 
+\end{tabular}
+\smallskip
+%----------------------------------------------------------------------------------------
 %	Skills
 %----------------------------------------------------------------------------------------
 
@@ -221,9 +221,8 @@ Certifications
 & for Apache Hadoop, 2012 \\
 & \\
 Tools
-& git, svn, vim, rails, postgreSQL \\
+& git, svn, vim, rails, postgreSQL, \\
 & Google Protocol Buffers, perforce \\
-& \\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -232,13 +231,16 @@ Tools
 
 \section{Projects}
     \begin{sloppypar}
-        {\bf CSH News:} Wrote an Android application to allow users to read and edit the Computer Science House's internal news network on a native application. \\
+        {\bf CSH News:} Wrote an Android application to allow users to read and edit 
+        the Computer Science House's internal news network on a native application. \\
     \end{sloppypar} 
     \begin{sloppypar}
-        {\bf CSH Hosing Site:} A Python webserver to allow for room registration for future room assignments for members of the Computer Science House.\\
+        {\bf CSH Housing Site:} A Python webserver to allow for room registration for
+        future room assignments for members of the Computer Science House.\\
     \end{sloppypar}
     \begin{sloppypar}
-        {\bf CSH Profiles:} A Ruby on Rails web server that is a interface to the LDAP servers that are used to store user information. Uses  SASL authentication with WebAuth to provide security. \\
+        {\bf CSH Profiles:} A Ruby on Rails web server that is a interface to LDAP
+        servers. It uses  SASL authentication with WebAuth to provide security. \\
     \end{sloppypar}
     
 %----------------------------------------------------------------------------------------
@@ -250,6 +252,7 @@ Tools
 \begin{sloppypar}
     {\bf 2012 - Maryland Math Engineering Science Achievement \\}Won 1st place in both regional and state level competitions for developing a maze transversal algorithm in python.
 \end{sloppypar}
+
 \bigskip
 %----------------------------------------------------------------------------------------
 
@@ -267,13 +270,11 @@ Tools
 
 \section{Clubs \& Activities}
 CSH (Computer Science House) \hfill \href{http://csh.rit.edu/}{http://csh.rit.edu} \\
-\begin{sloppypar}
-An organization at RIT that provides a living and learning enviroment with access to unique facilities, hands-on learning, all in a social enviroment.\\
-\end{sloppypar}
+An organization at RIT that provides a living and learning enviroment with access to 
+unique facilities, hands-on learning, all in a social enviroment.\\
+\\
 Robotics Team 2537 \hfill \href{http://first.raidtech.net}{http://first.raidtech.net} \\
-\begin{sloppypar}
-Was part of a robotics team in which I built and maintained the team's award winning website. \\
-\end{sloppypar}
+Was part of a robotics team in which I built and maintained the team's award winning website.
 
 \end{minipage} % End right-hand side of the page
 
