--- a/resume.tex
+++ b/resume.tex
@@ -92,7 +92,7 @@
 % WORK EXPERIENCE -1
 %------------------------------------------------
 
-{\raggedleft\textsc{Summer 2014 - New York NY}\par}
+{\raggedleft\textsc{Summer 2014 - New York, NY}\par}
 
 {\raggedright\large Google \\
 \textit{Engineering Practicum Intern}  \hfill {\small \href{http://google.com}{http://google.com}}\\ [5pt]}
@@ -104,7 +104,7 @@
 % WORK EXPERIENCE 0
 %------------------------------------------------
 
-{\raggedleft\textsc{Spring 2014 - Seattle WA}\par}
+{\raggedleft\textsc{Spring 2014 - Seattle, WA}\par}
 
 {\raggedright\large Amazon \\
 \textit{Software Developer Engineer Intern}  \hfill {\small \href{http://amazon.com}{http://amazon.com}}\\ [5pt]}
@@ -119,7 +119,7 @@ team. Languages / tools used: Java, various AWS products}\\
 
 {\raggedleft\textsc{Summer 2013 - Laurel, MD}\par}
 
-{\raggedright\large John Hopkins University Applied Physis Lab \\
+{\raggedright\large John Hopkins University Applied Physics Lab \\
 \textit{Summer Intern}  \hfill {\small \href{http://jhuapl.edu}{http://jhuapl.edu}}\\ [5pt]}
 
 \normalsize{Implemented a sensor management system used to control and collect data from multiple telescopes remotely. Languages / tools used: Java, ant, svn, SQL, Google Protocol Buffers.}\\
@@ -144,7 +144,7 @@ team. Languages / tools used: Java, various AWS products}\\
 {\raggedright\large SRA, International \\
 \textit{Summer Intern} \hfill {\small \href{http://sra.com}{http://sra.com}} \\[5pt]}
 
-\normalsize{Worked on developing software to monitor server rooms' downtime and delt with data backups.}\\
+\normalsize{Worked on developing software to monitor server rooms' downtime and dealt with data backups.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 4
@@ -229,17 +229,17 @@ Tools
 %	Projects
 %----------------------------------------------------------------------------------------
 
-\section{Projects}
+\section{Self-Directed Projects}
     \begin{sloppypar}
-        {\bf CSH News:} Wrote an Android application to allow users to read and edit 
+        {\bf Mobile News:} Wrote an Android application to allow users to read and edit 
         the Computer Science House's internal news network on a native application. \\
     \end{sloppypar} 
     \begin{sloppypar}
-        {\bf CSH Housing Site:} A Python webserver to allow for room registration for
+        {\bf CSH Housing Site:} Designed a Python webserver to allow for room registration for
         future room assignments for members of the Computer Science House.\\
     \end{sloppypar}
     \begin{sloppypar}
-        {\bf CSH Profiles:} A Ruby on Rails web server that is a interface to LDAP
+        {\bf LDAP Profiles:} Created a Ruby on Rails web server that is a web interface to LDAP
         servers. It uses  SASL authentication with WebAuth to provide security. \\
     \end{sloppypar}
     
