--- a/resume.tex
+++ b/resume.tex
@@ -82,6 +82,9 @@
 \vspace{0pt} % Trick for alignment
 
 
+\section{Objective}
+\normalsize{To secure a co-op position for the summer of 2015.}\\
+
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE
 %----------------------------------------------------------------------------------------
@@ -98,7 +101,8 @@
 \textit{Engineering Practicum Intern}  \hfill {\small \href{http://google.com}{http://google.com}}\\ [5pt]}
 
 \normalsize{Worked on load testing infrastructure and implemented performance increases
-    in Google SRE software. Languages / tools used: Java, Python, various Google datastores}\\
+    as a site reliability engineer. Languages / tools used: Java, Python, various Google 
+    datastores.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 0
@@ -122,7 +126,9 @@ team. Languages / tools used: Java, various AWS products}\\
 {\raggedright\large John Hopkins University Applied Physics Lab \\
 \textit{Summer Intern}  \hfill {\small \href{http://jhuapl.edu}{http://jhuapl.edu}}\\ [5pt]}
 
-\normalsize{Implemented a sensor management system used to control and collect data from multiple telescopes remotely. Languages / tools used: Java, ant, svn, SQL, Google Protocol Buffers.}\\
+\normalsize{Implemented a sensor management system used to control and collect 
+data from multiple telescopes remotely. Languages / tools used: Java, ant, 
+svn, SQL, Google Protocol Buffers.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 2
@@ -133,7 +139,9 @@ team. Languages / tools used: Java, various AWS products}\\
 {\raggedright\large Six3 Systems, Inc. \\
 \textit{Summer Intern} \hfill {\small \href{http://six3esd.com}{http://six3esd.com}} \\[5pt]}
 
-\normalsize{Worked in a group developing a course to teach employees about big data solutions such as Hadoop, HBase, etc. Languages / tools used: Java, Hadoop, Eclipse, HBase}\\
+\normalsize{Worked on a team developing a course to teach employees about big 
+data solutions such as Hadoop, HBase, etc. Languages / tools used: Java, 
+Hadoop, Eclipse, HBase}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 3
@@ -144,7 +152,8 @@ team. Languages / tools used: Java, various AWS products}\\
 {\raggedright\large SRA, International \\
 \textit{Summer Intern} \hfill {\small \href{http://sra.com}{http://sra.com}} \\[5pt]}
 
-\normalsize{Worked on developing software to monitor server rooms' downtime and dealt with data backups.}\\
+\normalsize{Worked on developing software to monitor server rooms' downtime 
+and dealt with data backups.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 4
@@ -214,12 +223,10 @@ team. Languages / tools used: Java, various AWS products}\\
 \begin{tabular}{rl}
 Languages
 & Python, Java, HTML/CSS, \\ 
-& Ruby, Go, C \\ 
-& \\
+& Ruby, Go \\ 
 Certifications
 & Cloudera Certified Developer \\
 & for Apache Hadoop, 2012 \\
-& \\
 Tools
 & git, svn, vim, rails, postgreSQL, \\
 & Google Protocol Buffers, perforce \\
@@ -235,12 +242,12 @@ Tools
         the Computer Science House's internal news network on a native application. \\
     \end{sloppypar} 
     \begin{sloppypar}
-        {\bf CSH Housing Site:} Designed a Python webserver to allow for room registration for
+        {\bf Housing Site:} Designed a Python webserver to allow for room registration for
         future room assignments for members of the Computer Science House.\\
     \end{sloppypar}
     \begin{sloppypar}
         {\bf LDAP Profiles:} Created a Ruby on Rails web server that is a web interface to LDAP
-        servers. It uses  SASL authentication with WebAuth to provide security. \\
+        servers. It uses SASL authentication with WebAuth to provide security. \\
     \end{sloppypar}
     
 %----------------------------------------------------------------------------------------
@@ -250,15 +257,18 @@ Tools
 \section{Awards} 
 
 \begin{sloppypar}
-    {\bf 2012 - Maryland Math Engineering Science Achievement \\}Won 1st place in both regional and state level competitions for developing a maze transversal algorithm in python.
+    {\bf 2012 - Maryland Math Engineering Science Achievement \\}
+    Won 1st place in both regional and state level competitions for 
+    developing a maze transversal algorithm in python.
 \end{sloppypar}
 
 \bigskip
 %----------------------------------------------------------------------------------------
 
 \begin{sloppypar}
-    {\bf 2012 - Website Excellence Award, FIRST Robotics \\}Developed and maintained 
-    an award winning website for my school's FIRST robotics team.
+    {\bf 2012 - Website Excellence Award, FIRST Robotics \\}
+    Developed and maintained an award winning website for my school's FIRST 
+    robotics team.
 \end{sloppypar}
 
 \bigskip
