Added text version of resume and fixed a couple of spelling mistakes

--- a/resume.tex
+++ b/resume.tex
@@ -102,7 +102,7 @@
 
 \normalsize{Worked on load testing infrastructure and implemented performance increases
     as a site reliability engineer. Languages / tools used: Java, Python, various Google 
-    datastores.}\\
+    data stores.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 0
@@ -242,7 +242,7 @@ Tools
         the Computer Science House's internal news network on a native application. \\
     \end{sloppypar} 
     \begin{sloppypar}
-        {\bf Housing Site:} Designed a Python webserver to allow for room registration for
+        {\bf Housing Site:} Designed a Python web server to allow for room registration for
         future room assignments for members of the Computer Science House.\\
     \end{sloppypar}
     \begin{sloppypar}
@@ -259,7 +259,7 @@ Tools
 \begin{sloppypar}
     {\bf 2012 - Maryland Math Engineering Science Achievement \\}
     Won 1st place in both regional and state level competitions for 
-    developing a maze transversal algorithm in python.
+    developing a maze traversal algorithm in python.
 \end{sloppypar}
 
 \bigskip
@@ -280,8 +280,8 @@ Tools
 
 \section{Clubs \& Activities}
 CSH (Computer Science House) \hfill \href{http://csh.rit.edu/}{http://csh.rit.edu} \\
-An organization at RIT that provides a living and learning enviroment with access to 
-unique facilities, hands-on learning, all in a social enviroment.\\
+An organization at RIT that provides a living and learning environment with access to 
+unique facilities, hands-on learning, all in a social environment.\\
 \\
 Robotics Team 2537 \hfill \href{http://first.raidtech.net}{http://first.raidtech.net} \\
 Was part of a robotics team in which I built and maintained the team's award winning website.
