minor updates for prof comm

--- a/resume.tex
+++ b/resume.tex
@@ -41,7 +41,8 @@
 % Colors for links, text and headings
 \usepackage{hyperref}
 \definecolor{linkcolor}{HTML}{506266} % Blue-gray color for links
-\definecolor{shade}{HTML}{F5DD9D} % Peach color for the contact information box
+\definecolor{shade}{HTML}{FFFFFF} % Peach color for the contact information box
+% \definecolor{shade}{HTML}{F5DD9D} % Peach color for the contact information box
 \definecolor{text1}{HTML}{2b2b2b} % Main document font color, off-black
 \definecolor{headings}{HTML}{701112} % Dark red color for headings
 % Other color palettes: shade=B9D7D9 and linkcolor=A40000; shade=D4D7FE and linkcolor=FF0080
@@ -141,7 +142,7 @@ svn, SQL, Google Protocol Buffers.}\\
 
 \normalsize{Worked on a team developing a course to teach employees about big 
 data solutions such as Hadoop, HBase, etc. Languages / tools used: Java, 
-Hadoop, Eclipse, HBase}\\
+Hadoop, HBase}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 3
@@ -208,7 +209,7 @@ and dealt with data backups.}\\
 % EDUCATION 1
 %------------------------------------------------
 
-2012 -- 2016 & \textbf{Rochester Institute of Technology} \\ 
+2012 -- 2016 & \textbf{The Rochester Institute of Technology} \\ 
 & \textsc{Computer Science Major} \\ 
 & \textit{Dean's List (3.60 GPA)}\\
 & Rochester, New York 
@@ -238,8 +239,9 @@ Tools
 
 \section{Self-Directed Projects}
     \begin{sloppypar}
-        {\bf Mobile News:} Wrote an Android application to allow users to read and edit 
-        the Computer Science House's internal news network on a native application. \\
+        {\bf Mobile News:} Wrote an Android application to allow users 
+        to read and edit the Computer Science House's internal news network on a native 
+        application. \\
     \end{sloppypar} 
     \begin{sloppypar}
         {\bf Housing Site:} Designed a Python web server to allow for room registration for
