--- a/resume.tex
+++ b/resume.tex
@@ -27,7 +27,7 @@
 	\end{asparablank}
 
 \section{\mysidestyle Objective}
-	To secure a co-op position for the summer of 2015.
+	To secure a 2015 summer internship in the field of computer science.
 
 \section{\mysidestyle Experience}
 	\begin{asparadesc}
@@ -54,18 +54,12 @@
         multiple telescopes remotely. Languages / tools used: Java, ant, svn, SQL, 
         Google Protocol Buffers.
         \normalsize
-		\end{asparadesc}
-
-\section{\mysidestyle Previous Internships}
-	\begin{asparadesc}
-        \employer{Six3 Systems, Inc.}{Fulton, MD}{Summer 2012}{Summer Intern}
-        {http://six3esd.com/}
-         \employer{SRA International}{Columbia, MD}{Summer 2012}{Summer Intern}
-        {http://sra.com/}
-        \employer{RTGX - Ross Technology, Inc.}{Baltimore, MD}{Summer 2011}{Summer Intern}
-        {http://rtgx.com/}
-        \employer{Computer Science Corporation}{Hanover, MD}{Summer 2011}{Summer Intern}
-        {http://csc.com/}
+        \\
+        \\
+        \textbf{Six3 Systems, Inc.} - Fulton, MD \hfill Summer 2012 - http://six3esd.com \\
+        \textbf{SRA International} - Columbia, MD \hfill Summer 2012 - http://sra.com \\
+        \textbf{RTGX - Ross Technology, Inc.} - Baltimore, MD \hfill Summer 2011 - http://rtgx.com \\
+        \textbf{Computer Science Corporation} - Hanover, MD \hfill Summer 2011 - http://csc.com
     \end{asparadesc}
 
 \section{\mysidestyle Education}
@@ -104,30 +98,34 @@
     \begin{asparablank}
         \item \textbf{Sys Mon}: Developed a system monitoring tool in Ruby to monitor 
             load average, memory usage, and IO. All the log 
-            data is viewable through a web interface with graphs over time.
+            data is viewable through a web interface with graphs over time. \\
         \item \textbf{Github Stats}: Create a data anaylzer in Go to determine the language
             usage of repositories on GitHub. This showed the connections between
             various languages and usage over time. This data anaylzer was set up in a
-            distributed manner using RabbitMQ.
+            distributed manner using RabbitMQ. \\
         \item \textbf{LDAP Profiles}: Created a Ruby on Rails web server that is a web 
             interface to LDAP servers. It uses SASL authentication with WebAuth 
-            to provide security.
+            to provide security. \\
+        \item \textbf{Mobile News}: Wrote an Android application to allow users to read 
+            and edit the Computer Science House’s internal news network on a 
+            native application. \\
+        \item \textbf{Housing Site}: Designed a Python web server to allow for room 
+            registration for future room assignments for members of the Computer
+            Science House.
     \end{asparablank}
 \section{\mysidestyle Awards}
     \begin{asparablank}
         \item \textbf{Maryland Math Engineering Science Achievement}: Won 1st place
             in both regional and state level competitions for developing a maze
-            traversal algorithm in Python.
+            traversal algorithm in Python. \\
         \item \textbf{Website Excellence Award, FIRST Robotics}: Developed and maintained an
-            award winning website for my school's FIRST robotics team.
+            award-winning website for my school's FIRST robotics team.
     \end{asparablank}
 \section{\mysidestyle Clubs \& Activities}
     \begin{asparablank}
         \item \textbf{CSH (Computer Science House)}: An organization at RIT that 
             provides a living and learning environment with access to unique facilities
             and hands-on learning, all in a social environment.
-        \item \textbf{Robotics Team 2537}: Was part of a robotics in which I built and
-            maintained the team's award winning website.
     \end{asparablank}
 \end{resume}
 \end{document}
