resume update to add back on old internships

--- a/resume.tex
+++ b/resume.tex
@@ -56,6 +56,7 @@
         \normalsize
         \\
         \\
+        Additional prior summer internships:\\
         \textbf{Six3 Systems, Inc.} - Fulton, MD \hfill Summer 2012 - http://six3esd.com \\
         \textbf{SRA International} - Columbia, MD \hfill Summer 2012 - http://sra.com \\
         \textbf{RTGX - Ross Technology, Inc.} - Baltimore, MD \hfill Summer 2011 - http://rtgx.com \\
@@ -81,9 +82,6 @@
 			\item Ruby
 			\item Go
 		} \end{inparaenum}
-        \item[Certifications] \begin{inparaenum} { \small
-            \item Cloudera Certified Developer for Apache Hadoop, 2012    
-        } \end{inparaenum}
 		\item[Tools] \begin{inparaenum} { \small
 			\item git
             \item svn
@@ -92,6 +90,9 @@
             \item postgreSQL
             \item Google Protocol Buffers
 		} \end{inparaenum}
+        \item[Certifications] \begin{inparaenum} { \small
+            \item Cloudera Certified Developer for Apache Hadoop, 2012    
+        } \end{inparaenum}
 	\end{compactdesc}
 
 \section{\mysidestyle Self-Directed Projects}
